= Changelog `vzd-cli`

== Version 2.2.0
- Kompatibilität mit VZD 3.2.0 (Admin API 1.9.4)
- `--human` Output Format ist jetzt deutlich kompakter und lesbar
- Neue Output Formate: `--yaml-ext` und `--json-ext`
- Zertifikate werden zu Smartcards gebündelt

== Version 2.1.0
- CLI Interface wurde weitgehend überarbeiten un vereinfacht, s. Dokumentation
- Self-Update Funktion wurde implementiert, s. `vzd-cli update`
- Erste simple Web-GUI wurde hinzugefügt, s. `vzd-cli gui`
- Neu: ApoVZD Unterstützung über `vzd-cli apo`
- `vzd-cli admin <tu|ru|pu> login` wurde komplett überarbeitet
- `vzd-cli admin <tu|ru|pu> token` ersetzt `vzd-cli admin auth`
- Neuer Befehl: `vzd-cli admin <tu|ru|pu> search`: schnelle, intuitive Suche nach Einträgen
- Neuer Befehl: `vzd-cli admin <tu|ru|pu> show <TELEMATIK_ID>`: zeigt den gesamten Eintrag in verschiedenen Formaten
- Neuer Befehl: `vzd-cli admin <tu|ru|pu> edit <TELEMATIK_ID>`: editieren eines Basiseintrags in einem Text-Editor
- Neuer Ausgabeformat: `--table`, eine ASCII Tabelle
- Compatibility Modus zu 1.6 wurde entfernt um Abhängigkeiten im gesamten Projekt übersichtlicher zu haben.

== Version 2.0.0
- Kompatibilitätsmodus zur VZDClient 1.6. Befehl `vzd-cli admin cmd`
- Neue Befehle unter `vzd-cli pers`: verarbeitet die Basisdaten und Zertifikate aus den Peronalisierung-XML(TSP-Schnittstelle exports)
und schreibt diese in `vzd-cli` kompatiblen Format
- Neuer Befehl `vzd-cli admin delete-cert`: Löschen der Zertifikate
- Unterstützung für Admin API 1.8.1 https://github.com/gematik/api-vzd/blob/I_Directory_Administration/1.8.1/src/openapi/DirectoryAdministration.yaml
- Unterstützung von Paging in `vzd-cli admin dump create` über `-c / --cursor-size` und `-e / --expected-count`
- Anpassung der Konfiguration über `vzd-cli admin config set`
- Kleine Bugfixes


== Version 0.16.x
- Neue Befehle unter `vzd-cli ldif`: Management der LDIF-Exporten
- Dump Optimierungen
- Neue Spalten im CSV-Output
  - FAD - KIM Anbieter Kennung